--- a/multi_tool_agent/agentTeam/agentTeam.ipynb
+++ b/multi_tool_agent/agentTeam/agentTeam.ipynb
@@ -330,6 +330,157 @@
     ")\n",
     "print(f\"Runner created for agent '{runner.agent.name}'.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80ac58b3",
+   "metadata": {},
+   "source": [
+    "### 4. Interact with the Agent\n",
+    "\n",
+    "We need a way to send messages to our agent and receive its responses. Since LLM calls and tool executions can take time, ADK's Runner operates asynchronously.\n",
+    "\n",
+    "We'll define an async helper function (call_agent_async) that:\n",
+    "\n",
+    "Takes a user query string.\n",
+    "Packages it into the ADK Content format.\n",
+    "Calls runner.run_async, providing the user/session context and the new message.\n",
+    "Iterates through the Events yielded by the runner. Events represent steps in the agent's execution (e.g., tool call requested, tool result received, intermediate LLM thought, final response).\n",
+    "Identifies and prints the final response event using event.is_final_response().\n",
+    "Why async? Interactions with LLMs and potentially tools (like external APIs) are I/O-bound operations. Using asyncio allows the program to handle these operations efficiently without blocking execution.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "54e76dd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Define Agent Interaction Function\n",
+    "\n",
+    "from google.genai import types # For creating message Content/Parts\n",
+    "\n",
+    "async def call_agent_async(query: str, runner, user_id, session_id):\n",
+    "  \"\"\"Sends a query to the agent and prints the final response.\"\"\"\n",
+    "  print(f\"\\n>>> User Query: {query}\")\n",
+    "\n",
+    "  # Prepare the user's message in ADK format\n",
+    "  content = types.Content(role='user', parts=[types.Part(text=query)])\n",
+    "\n",
+    "  final_response_text = \"Agent did not produce a final response.\" # Default\n",
+    "\n",
+    "  # Key Concept: run_async executes the agent logic and yields Events.\n",
+    "  # We iterate through events to find the final answer.\n",
+    "  async for event in runner.run_async(user_id=user_id, session_id=session_id, new_message=content):\n",
+    "      # You can uncomment the line below to see *all* events during execution\n",
+    "      # print(f\"  [Event] Author: {event.author}, Type: {type(event).__name__}, Final: {event.is_final_response()}, Content: {event.content}\")\n",
+    "\n",
+    "      # Key Concept: is_final_response() marks the concluding message for the turn.\n",
+    "      if event.is_final_response():\n",
+    "          if event.content and event.content.parts:\n",
+    "             # Assuming text response in the first part\n",
+    "             final_response_text = event.content.parts[0].text\n",
+    "          elif event.actions and event.actions.escalate: # Handle potential errors/escalations\n",
+    "             final_response_text = f\"Agent escalated: {event.error_message or 'No specific message.'}\"\n",
+    "          # Add more checks here if needed (e.g., specific error codes)\n",
+    "          break # Stop processing events once the final response is found\n",
+    "\n",
+    "  print(f\"<<< Agent Response: {final_response_text}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d035a72b",
+   "metadata": {},
+   "source": [
+    "### 5. Run the Conversation\n",
+    "\n",
+    "Finally, let's test our setup by sending a few queries to the agent. We wrap our async calls in a main async function and run it using await.\n",
+    "\n",
+    "Watch the output:\n",
+    "\n",
+    "See the user queries.\n",
+    "Notice the --- Tool: get_weather called... --- logs when the agent uses the tool.\n",
+    "Observe the agent's final responses, including how it handles the case where weather data isn't available (for Paris)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b7b9cce0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      ">>> User Query: What is the weather like in London?\n",
+      "--- Tool: get_weather called for city: London ---\n",
+      "--- Tool: get_weather called for city: London ---\n",
+      "<<< Agent Response: The weather in London is cloudy with a temperature of 15°C.\n",
+      "\n",
+      "\n",
+      ">>> User Query: How about Paris?\n",
+      "<<< Agent Response: The weather in London is cloudy with a temperature of 15°C.\n",
+      "\n",
+      "\n",
+      ">>> User Query: How about Paris?\n",
+      "--- Tool: get_weather called for city: Paris ---\n",
+      "--- Tool: get_weather called for city: Paris ---\n",
+      "<<< Agent Response: Sorry, I don't have weather information for Paris.\n",
+      "\n",
+      "\n",
+      ">>> User Query: Tell me the weather in New York\n",
+      "<<< Agent Response: Sorry, I don't have weather information for Paris.\n",
+      "\n",
+      "\n",
+      ">>> User Query: Tell me the weather in New York\n",
+      "--- Tool: get_weather called for city: New York ---\n",
+      "--- Tool: get_weather called for city: New York ---\n",
+      "<<< Agent Response: The weather in New York is sunny with a temperature of 25°C.\n",
+      "\n",
+      "<<< Agent Response: The weather in New York is sunny with a temperature of 25°C.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# @title Run the Initial Conversation\n",
+    "\n",
+    "# We need an async function to await our interaction helper\n",
+    "async def run_conversation():\n",
+    "    await call_agent_async(\"What is the weather like in London?\",\n",
+    "                                       runner=runner,\n",
+    "                                       user_id=USER_ID,\n",
+    "                                       session_id=SESSION_ID)\n",
+    "\n",
+    "    await call_agent_async(\"How about Paris?\",\n",
+    "                                       runner=runner,\n",
+    "                                       user_id=USER_ID,\n",
+    "                                       session_id=SESSION_ID) # Expecting the tool's error message\n",
+    "\n",
+    "    await call_agent_async(\"Tell me the weather in New York\",\n",
+    "                                       runner=runner,\n",
+    "                                       user_id=USER_ID,\n",
+    "                                       session_id=SESSION_ID)\n",
+    "\n",
+    "# Execute the conversation using await in an async context (like Colab/Jupyter)\n",
+    "await run_conversation()\n",
+    "\n",
+    "# --- OR ---\n",
+    "\n",
+    "# Uncomment the following lines if running as a standard Python script (.py file):\n",
+    "# import asyncio\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     try:\n",
+    "#         asyncio.run(run_conversation())\n",
+    "#     except Exception as e:\n",
+    "#         print(f\"An error occurred: {e}\")"
+   ]
   }
  ],
  "metadata": {
