--- a/multi_tool_agent/agentTeam/agentTeam.ipynb
+++ b/multi_tool_agent/agentTeam/agentTeam.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "40712c71",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "39b03c57",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2f64d7bd",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "346f07d8",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9f20e07f",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "60569bc0",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "54e76dd2",
    "metadata": {},
    "outputs": [],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b7b9cce0",
    "metadata": {},
    "outputs": [
@@ -431,11 +431,11 @@
       ">>> User Query: How about Paris?\n",
       "--- Tool: get_weather called for city: Paris ---\n",
       "--- Tool: get_weather called for city: Paris ---\n",
-      "<<< Agent Response: Sorry, I don't have weather information for Paris.\n",
+      "<<< Agent Response: I am sorry, I don't have weather information for Paris.\n",
       "\n",
       "\n",
       ">>> User Query: Tell me the weather in New York\n",
-      "<<< Agent Response: Sorry, I don't have weather information for Paris.\n",
+      "<<< Agent Response: I am sorry, I don't have weather information for Paris.\n",
       "\n",
       "\n",
       ">>> User Query: Tell me the weather in New York\n",
@@ -480,6 +480,249 @@
     "#         asyncio.run(run_conversation())\n",
     "#     except Exception as e:\n",
     "#         print(f\"An error occurred: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6652deef",
+   "metadata": {},
+   "source": [
+    "### Step 2: Going Multi-Model with LiteLLM [Optional]¶\n",
+    "In Step 1, we built a functional Weather Agent powered by a specific Gemini model. While effective, real-world applications often benefit from the flexibility to use different Large Language Models (LLMs). Why?\n",
+    "\n",
+    "Performance: Some models excel at specific tasks (e.g., coding, reasoning, creative writing).\n",
+    "Cost: Different models have varying price points.\n",
+    "Capabilities: Models offer diverse features, context window sizes, and fine-tuning options.\n",
+    "Availability/Redundancy: Having alternatives ensures your application remains functional even if one provider experiences issues.\n",
+    "ADK makes switching between models seamless through its integration with the LiteLLM library. LiteLLM acts as a consistent interface to over 100 different LLMs.\n",
+    "\n",
+    "In this step, we will:\n",
+    "\n",
+    "Learn how to configure an ADK Agent to use models from providers like OpenAI (GPT) and Anthropic (Claude) using the LiteLlm wrapper.\n",
+    "Define, configure (with their own sessions and runners), and immediately test instances of our Weather Agent, each backed by a different LLM.\n",
+    "Interact with these different agents to observe potential variations in their responses, even when using the same underlying tool.\n",
+    "\n",
+    "1. Import LiteLlm\n",
+    "\n",
+    "We imported this during the initial setup (Step 0), but it's the key component for multi-model support:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f9098aa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title 1. Import LiteLlm\n",
+    "from google.adk.models.lite_llm import LiteLlm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bab0b6b",
+   "metadata": {},
+   "source": [
+    "#### 2. Define and Test Multi-Model Agents\n",
+    "\n",
+    "Instead of passing only a model name string (which defaults to Google's Gemini models), we wrap the desired model identifier string within the LiteLlm class.\n",
+    "\n",
+    "Key Concept: LiteLlm Wrapper: The LiteLlm(model=\"provider/model_name\") syntax tells ADK to route requests for this agent through the LiteLLM library to the specified model provider.\n",
+    "Make sure you have configured the necessary API keys for OpenAI and Anthropic in Step 0. We'll use the call_agent_async function (defined earlier, which now accepts runner, user_id, and session_id) to interact with each agent immediately after its setup.\n",
+    "\n",
+    "Each block below will:\n",
+    "\n",
+    "Define the agent using a specific LiteLLM model (MODEL_GPT_4O or MODEL_CLAUDE_SONNET).\n",
+    "Create a new, separate InMemorySessionService and session specifically for that agent's test run. This keeps the conversation histories isolated for this demonstration.\n",
+    "Create a Runner configured for the specific agent and its session service.\n",
+    "Immediately call call_agent_async to send a query and test the agent.\n",
+    "Best Practice: Use constants for model names (like MODEL_GPT_4O, MODEL_CLAUDE_SONNET defined in Step 0) to avoid typos and make code easier to manage.\n",
+    "\n",
+    "Error Handling: We wrap the agent definitions in try...except blocks. This prevents the entire code cell from failing if an API key for a specific provider is missing or invalid, allowing the tutorial to proceed with the models that are configured.\n",
+    "\n",
+    "First, let's create and test the agent using OpenAI's GPT-4o."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d390690b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Define and Test GPT Agent\n",
+    "\n",
+    "# Make sure 'get_weather' function from Step 1 is defined in your environment.\n",
+    "# Make sure 'call_agent_async' is defined from earlier.\n",
+    "\n",
+    "# --- Agent using GPT-4o ---\n",
+    "weather_agent_gpt = None # Initialize to None\n",
+    "runner_gpt = None      # Initialize runner to None\n",
+    "\n",
+    "try:\n",
+    "    weather_agent_gpt = Agent(\n",
+    "        name=\"weather_agent_gpt\",\n",
+    "        # Key change: Wrap the LiteLLM model identifier\n",
+    "        model=LiteLlm(model=MODEL_GPT_4O),\n",
+    "        description=\"Provides weather information (using GPT-4o).\",\n",
+    "        instruction=\"You are a helpful weather assistant powered by GPT-4o. \"\n",
+    "                    \"Use the 'get_weather' tool for city weather requests. \"\n",
+    "                    \"Clearly present successful reports or polite error messages based on the tool's output status.\",\n",
+    "        tools=[get_weather], # Re-use the same tool\n",
+    "    )\n",
+    "    print(f\"Agent '{weather_agent_gpt.name}' created using model '{MODEL_GPT_4O}'.\")\n",
+    "\n",
+    "    # InMemorySessionService is simple, non-persistent storage for this tutorial.\n",
+    "    session_service_gpt = InMemorySessionService() # Create a dedicated service\n",
+    "\n",
+    "    # Define constants for identifying the interaction context\n",
+    "    APP_NAME_GPT = \"weather_tutorial_app_gpt\" # Unique app name for this test\n",
+    "    USER_ID_GPT = \"user_1_gpt\"\n",
+    "    SESSION_ID_GPT = \"session_001_gpt\" # Using a fixed ID for simplicity\n",
+    "\n",
+    "    # Create the specific session where the conversation will happen\n",
+    "    session_gpt = await session_service_gpt.create_session(\n",
+    "        app_name=APP_NAME_GPT,\n",
+    "        user_id=USER_ID_GPT,\n",
+    "        session_id=SESSION_ID_GPT\n",
+    "    )\n",
+    "    print(f\"Session created: App='{APP_NAME_GPT}', User='{USER_ID_GPT}', Session='{SESSION_ID_GPT}'\")\n",
+    "\n",
+    "    # Create a runner specific to this agent and its session service\n",
+    "    runner_gpt = Runner(\n",
+    "        agent=weather_agent_gpt,\n",
+    "        app_name=APP_NAME_GPT,       # Use the specific app name\n",
+    "        session_service=session_service_gpt # Use the specific session service\n",
+    "        )\n",
+    "    print(f\"Runner created for agent '{runner_gpt.agent.name}'.\")\n",
+    "\n",
+    "    # --- Test the GPT Agent ---\n",
+    "    print(\"\\n--- Testing GPT Agent ---\")\n",
+    "    # Ensure call_agent_async uses the correct runner, user_id, session_id\n",
+    "    await call_agent_async(query = \"What's the weather in Tokyo?\",\n",
+    "                           runner=runner_gpt,\n",
+    "                           user_id=USER_ID_GPT,\n",
+    "                           session_id=SESSION_ID_GPT)\n",
+    "    # --- OR ---\n",
+    "\n",
+    "    # Uncomment the following lines if running as a standard Python script (.py file):\n",
+    "    # import asyncio\n",
+    "    # if __name__ == \"__main__\":\n",
+    "    #     try:\n",
+    "    #         asyncio.run(call_agent_async(query = \"What's the weather in Tokyo?\",\n",
+    "    #                      runner=runner_gpt,\n",
+    "    #                       user_id=USER_ID_GPT,\n",
+    "    #                       session_id=SESSION_ID_GPT)\n",
+    "    #     except Exception as e:\n",
+    "    #         print(f\"An error occurred: {e}\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Could not create or run GPT agent '{MODEL_GPT_4O}'. Check API Key and model name. Error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "229a1dc3",
+   "metadata": {},
+   "source": [
+    "Next, we'll do the same for Anthropic's Claude Sonnet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85a9a08a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @title Define and Test Claude Agent\n",
+    "\n",
+    "# Make sure 'get_weather' function from Step 1 is defined in your environment.\n",
+    "# Make sure 'call_agent_async' is defined from earlier.\n",
+    "\n",
+    "# --- Agent using Claude Sonnet ---\n",
+    "weather_agent_claude = None # Initialize to None\n",
+    "runner_claude = None      # Initialize runner to None\n",
+    "\n",
+    "try:\n",
+    "    weather_agent_claude = Agent(\n",
+    "        name=\"weather_agent_claude\",\n",
+    "        # Key change: Wrap the LiteLLM model identifier\n",
+    "        model=LiteLlm(model=MODEL_CLAUDE_SONNET),\n",
+    "        description=\"Provides weather information (using Claude Sonnet).\",\n",
+    "        instruction=\"You are a helpful weather assistant powered by Claude Sonnet. \"\n",
+    "                    \"Use the 'get_weather' tool for city weather requests. \"\n",
+    "                    \"Analyze the tool's dictionary output ('status', 'report'/'error_message'). \"\n",
+    "                    \"Clearly present successful reports or polite error messages.\",\n",
+    "        tools=[get_weather], # Re-use the same tool\n",
+    "    )\n",
+    "    print(f\"Agent '{weather_agent_claude.name}' created using model '{MODEL_CLAUDE_SONNET}'.\")\n",
+    "\n",
+    "    # InMemorySessionService is simple, non-persistent storage for this tutorial.\n",
+    "    session_service_claude = InMemorySessionService() # Create a dedicated service\n",
+    "\n",
+    "    # Define constants for identifying the interaction context\n",
+    "    APP_NAME_CLAUDE = \"weather_tutorial_app_claude\" # Unique app name\n",
+    "    USER_ID_CLAUDE = \"user_1_claude\"\n",
+    "    SESSION_ID_CLAUDE = \"session_001_claude\" # Using a fixed ID for simplicity\n",
+    "\n",
+    "    # Create the specific session where the conversation will happen\n",
+    "    session_claude = await session_service_claude.create_session(\n",
+    "        app_name=APP_NAME_CLAUDE,\n",
+    "        user_id=USER_ID_CLAUDE,\n",
+    "        session_id=SESSION_ID_CLAUDE\n",
+    "    )\n",
+    "    print(f\"Session created: App='{APP_NAME_CLAUDE}', User='{USER_ID_CLAUDE}', Session='{SESSION_ID_CLAUDE}'\")\n",
+    "\n",
+    "    # Create a runner specific to this agent and its session service\n",
+    "    runner_claude = Runner(\n",
+    "        agent=weather_agent_claude,\n",
+    "        app_name=APP_NAME_CLAUDE,       # Use the specific app name\n",
+    "        session_service=session_service_claude # Use the specific session service\n",
+    "        )\n",
+    "    print(f\"Runner created for agent '{runner_claude.agent.name}'.\")\n",
+    "\n",
+    "    # --- Test the Claude Agent ---\n",
+    "    print(\"\\n--- Testing Claude Agent ---\")\n",
+    "    # Ensure call_agent_async uses the correct runner, user_id, session_id\n",
+    "    await call_agent_async(query = \"Weather in London please.\",\n",
+    "                           runner=runner_claude,\n",
+    "                           user_id=USER_ID_CLAUDE,\n",
+    "                           session_id=SESSION_ID_CLAUDE)\n",
+    "\n",
+    "    # --- OR ---\n",
+    "\n",
+    "    # Uncomment the following lines if running as a standard Python script (.py file):\n",
+    "    # import asyncio\n",
+    "    # if __name__ == \"__main__\":\n",
+    "    #     try:\n",
+    "    #         asyncio.run(call_agent_async(query = \"Weather in London please.\",\n",
+    "    #                      runner=runner_claude,\n",
+    "    #                       user_id=USER_ID_CLAUDE,\n",
+    "    #                       session_id=SESSION_ID_CLAUDE)\n",
+    "    #     except Exception as e:\n",
+    "    #         print(f\"An error occurred: {e}\")\n",
+    "\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Could not create or run Claude agent '{MODEL_CLAUDE_SONNET}'. Check API Key and model name. Error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dd37e72",
+   "metadata": {},
+   "source": [
+    "Observe the output carefully from both code blocks. You should see:\n",
+    "\n",
+    "Each agent (weather_agent_gpt, weather_agent_claude) is created successfully (if API keys are valid).\n",
+    "A dedicated session and runner are set up for each.\n",
+    "Each agent correctly identifies the need to use the get_weather tool when processing the query (you'll see the --- Tool: get_weather called... --- log).\n",
+    "The underlying tool logic remains identical, always returning our mock data.\n",
+    "However, the final textual response generated by each agent might differ slightly in phrasing, tone, or formatting. This is because the instruction prompt is interpreted and executed by different LLMs (GPT-4o vs. Claude Sonnet).\n",
+    "This step demonstrates the power and flexibility ADK + LiteLLM provide. You can easily experiment with and deploy agents using various LLMs while keeping your core application logic (tools, fundamental agent structure) consistent.\n",
+    "\n",
+    "In the next step, we'll move beyond a single agent and build a small team where agents can delegate tasks to each other!"
    ]
   }
  ],
